--- a/note/10_19.md
+++ b/note/10_19.md
@@ -171,6 +171,20 @@ meaning of life : release
 
 합성 데이터 구조를 입력하고 범위 지정하는 방법을 알아보자 
 
+{{range .}}
+{{.}}
+{{end}}
+
+range는 슬라이스나 맵을 반복하는데 사용한다.
+
+map으로도 가능 
+slice로도 가능 
+
+{{$key, $value := .}}
+{{$key}} - {{$value}}
+{{end}}
+
+struct 도 가져올 수 있다. 
 
 
 
