--- a/note/10_22.md
+++ b/note/10_22.md
@@ -533,6 +533,189 @@ Header
 write
 writeHeader
 
+ServeMux
+
+Hnadler 타입을 이해해야한다.
+ListenAndServe 
+
+어떤 타입이든 핸들러 인터페이스를 받는다
+
+라우트와 기능을 ServeMux에 넣을 수 있다. 
+Handler인터페이스를 이해하고 ListenAndServe 
+
+fkdnxld 또는 멀티플렉싱
+
+지금까진 타입 핸들러, ResponseWriter, *reequest 
+serveHTTP ListenandServec
+
+리퀘스트와 구조체로의 요청이 있는것과 각 필드의 값을 바았다. 
+라우팅을 어떻게 하는지는 아직 안배웓ㅆ따.
+
+각 URL에 어떻게 응답하고 서로 다른 코드를 반환할지에 대해 알아보자 
+
+한가지 방식은 우리가 이미 가진걸로 시작하는 것이다. 
+
+핸들러인터페이스 하위에 int 타입이 있다. 
+d에 정체성 혼란이 온다. 
+
+하위타입은 int 값은 d 이다. 
+
+8080으로 들어오는 모든 요청은 요청을 처리하고 하는데 다 쓴다. 
+
+8080인 이유는 개발을 위한 포트이기 떄문이다. 
+
+라우팅을 해볼건데 
+URL.path에 /dog /cat을 놓을 것이다. 
+
+라우팅을 하는 하나의 방식이고 깔끔하지 않은방식이다. 
+
+mux := http.Newservemuc 
+라우터 요청라우터 , 멀티플렉서 먹스 , 전부 교환 가능한 용어고 http르 ㄹ써도 된다. 
+
+특정 라우팅 기반이다. 그 라우팅은 /cat Get이다. 
+
+다른 라우팅을 기반으로하면 서브먹스에 대한 표준 설명서를 보자 
+서브먹스를 보면 
+
+서브먹스에 대한 포인터를 얻는다. 서브먹스에 대한 포인터가 있을경우 핸들러인터페이스도 적용하게 된다
+핸
+
+hotdog이 먹스느 ㄴ서브먹스 타입 포인ㄴ터에 값이 있을경우 메서드들이 전부 사용가능하다. 
+
+handle도 하나의 메서드중 하나이다. 
+
+서브먹스 타입 포인터에 대한 값이고hnadle("/dog/", d)
+
+/dog로 잡을 것이다. 
+/cat으로 들어오면 cat뒤에는 아무것도 없기 떄문에 아무것도 안잡는다
+
+net/http 
+defaultServeMux 라고 불리는걸 볼 수 있다. 
+
+handler는 보통 nil인데 
+먹스를 통해 핸들을 하고 그걸 넣어준다. 
+nil을 이용하는데 
+defaultservemux
+
+핸들러는 있어야한다
+handleFunc로 핸들하는것이다. 
+
+HandleFunc에서는 패턴을 취하고 이타입의 handler를 취한다. 
+
+handler가 아니라 고유의 타입이라는 것이다. 
+
+http.HandleFunc
+
+HandleFunc처럼 시그니처가 있는 함수는 
+
+ResponseWriter와 *rquest가 있다. 
+
+이게 더 깔끔하다. 
+
+핸들러인터페이스인 타입 핸들러가 있고 ListenAndServe
+net/http 패키지를 써도 된다. 
+
+메서드들이 연결되어있는 서브먹스가 있다
+
+handle이나 handlefunc를 만들수 있다. 
+서브먹스가 메서드를 취하면서 핸들러인터페이스를 적용했기에
+
+서브먹스를 ListenandServe로 보낼 수 있다. 
+
+핸들러가 nil일때라고 나와있다. 
+
+그 멀티플레선느 
+
+여기에 nil을 넣는게 왜인지 알아야된다. 
+handlefunc도 http 패키지레벨에서 알아야한다. 
+
+handlefunc와 함수의 매개변수도 알아야한다. 
+
+handle을 사용하면 handler가 요구되는 것
+
+net/http패키지를 활용하는데 졶은 기반이 된다. 
+여러번 할수록 구체화된깐
+
+ㄱㄷ네ㅐㅜㄴㄷ쟋ㄷㄱ와 * request에 대해서 알아보자 
+
+handle handler handlerfunc 
+
+net/http패키지를 이해하려면 인터페이스인 타입 핸들러르 ㄹ알아야된다. 
+*request를 갖춘 responsewirter 
+
+a먹스나 멀티플렉서 서브먹스로 라우팅한다. 
+newservemux 
+서브먹스의 값은 핸들러
+
+handle handlefunc는 매개변수를 가진 ResponseWriter * requset 를
+가진 함수이다. 
+handlefunc를 사용하면 그게 경로를 취할거고 함수를 넣을 것이다. 
+
+함수를 넣으면 거기엔 매개변수 reponsewriter * request
+
+리슨엔서브에는 nil로 넣는다. 
+defualtservemuc를 쓰는데 handlefunc 가장 흔하게 상여된다. 
+
+표준 라이브러리에 가면 handlefunc가 *requestdhk 
+
+Reponsewriter와, req *http.request가 있다. 
+
+handle을 메서드를 원한다. 
+
+핸들러인터페이스를 적용하게 된다. 
+
+handlefunc하위 타입은 이렇고 
+변환을 거치고 handler려
+
+handlerfunc(d)
+
+handler가 원하는 인터페이스를 가지고 있다. 
+
+이 매개변수들과 함께
+
+코드에 멀티플렉서를 쓰는 2가지방법을 배웠다. 
+newServeMux
+
+serveHTTP에 여러 메서드가 있었고 Responsewirter (* request)eh 
+도 들어있었다. 
+
+handlefunc를 쓰고 라우팅에 넣은 뒤 매개변수와 
+responseWriter * request를 포함하는 것도 있었다. 
+
+newServeMux, DefaultServeMux 
+
+패키지 레벨에서 
+
+많이 쓰이는건 handlefunc이다. 
+
+함수들은 시그니처가 있어야 한다. 
+
+NewServeMux DefaultServemux
+
+서드 파티 패키지를 하는 것이다. 
+
+httprouter
+
+get appl html에 적용될 것이다. 
+apply와 applyprocess
+
+apply에 가면 메서드는 post이니 적용작업을 할것이다. 
+
+원하는 파트르 꺼낼 수 있다. 
+특정 포맷에 맞워야된다. 
+
+URI를 꺼내서 분석할 수 있는 것이다.
+
+user/mcleod
+
+뭔가를 잡기위해 name/exaect 이 라우터는 정확성을 요구한다. 
+
+액세스 허용을 하고 이름으로 해보자 
+
+경로가 정확하게 일치해야한다. 
+ge과 post의 차이이다. 
+
+NHands-on Exercises 개념을 학습하고나서 이걸 제대로 구체화시키고 
 
 
 
