--- a/note/10_23.md
+++ b/note/10_23.md
@@ -45,13 +45,159 @@ fs :=
 
 http.fileservcer(http.Dir("public"))  
 
+yaml 파일이 필요하다. 
 
+gid add -- all
+git commit -m 
 
+구글에서 도메인을 구매하여 DNS 구성으로 들어간다. 
+도메인이 APP Engine이 해준다. 
 
+FormValue 요청을 보면 post 및 put 
+키 스트링  없으면 빈 스트링 값을 얻는다. 
+url에 값을 넣ㅇ르 수 있다. 
 
+FormValue url 에서 값을 불러온다. 
+url을 통해 form 값을 얻을 수 있다. 
 
+post form get url
 
+폼을 게시한다. 
+식별지 q가 있는 FormValue를 요ㅕ청한다. 
 
+문자열의 값을 추가하는데 어떤 값이든 가능하다. 
+
+폼을 제출할때 post는 본문을 통해 하고 url을 통해서면 get을 사용한다. 
+
+네번째 
+
+req = FormValue("subscribe") == "on"
+
+FormFile을 써야된다. 
+name = "q" 
+enctype "multiplart/form-data" 파일업로드한다는것
+
+io.Sekk 파일을 읽고 쓰는  다시 읽기하려면 재생 헤드를 처음으로 돌려야한다
+그걸 seeker가 한다. 
+
+fileheader filename 다른 파일에도 쓰고 서버에도 저장한다. 
+파일을 가지고 파로 올렸다. 
+
+user 폴더에도 올려준다. 
+파일 제출 기능
+
+Enctype multipart/form-data
+
+인코딩 유형인 multipart/form-data 로 해야 파일을 업로드 할 수 있다. 
+파일을 업로드할 수 있는 폼을 만들때 마다 해야한다. 
+
+entype은 html이다. 
+form 
+
+bs := make([]byte, req.ContentLength)
+req.Body.Read(bs)
+body := string(bs)
+
+템플릿에 넣고 진행
+
+len 과 cap 슬라이스의 기본은 배열이고 초기화된 슬라이스의 크기를 설정한다. 
+문자열의 0은 그냥 빈 숫자다 
+xs[0] = 4
+대괄호에 11을 넣을 순 없다. 
+왜냐면 그렇게 초기화하지 않았기 떄문이다. 
+
+name poem filename birches.txt
+stuff
+url 인코딩 방식과 같은 기본 인코딩 유형
+
+다른 인코딩 유형 타입이다. req.Body read 메서드로 req.vody인 데이터를 
+바이트 슬라이스로 가져와서 하는 것
+
+redirect 에 대해 알아보자
+
+요청을 한 위치에서 다른 위치로 다시 보낼 수 있다. 
+특정 리소스를 요청하는데 URL 혹은 URI이다.교체사용가능
+
+post 메서드로 양식을 제출할 수 있고 리다이렉션은 매우 간단하다. 
+
+말 그대로 다른 곳에 재전송한다는 것
+Index의 아래를 보면 상수 부분이 있고 다양한 상태 코드이다. 
+200번대는 성공 300 번대는 리다이렉트다. 
+
+서버간에 텍스트에서 형식을 저장하고 형식화에서 요청라인과 상태 라인이 있다. 
+요청라인에는 get이나 post가 있고 url을 대상으로 한다. 
+버전이 있는데 그 다음 상태에는 버전 상태코드가 있다. 
+
+리다이렉션을 수행하려는 경우 상태 코드를 제공하는데 301이나 307이 주는 넘버다. 
+
+하이퍼텍스트 전송 프로토콜은 규칙이기 떄문에 텍스트가 왕복하느 ㄴ규칙이 있다. 
+스타트라인 헤드 바디  응답에서는 상태라인이라고 하는데 
+헤더와 본문이 있다. 
+
+rfc7230
+요청라인과 상태라인은 특정 방식으로 포매팅된다. 
+요청 라인은 메서드 uri crlf 버전 crlf
+
+/dog
+/apply
+
+상태 코드와 이유 문구에 대해 좀 더 알고 싶다면 rc 7231의 문서를 확인해보면되낟
+300번대는 리다이렉션 
+301 영구적으로 이동했다.
+302 임시적으로 이동했다.
+303 다른 방식으로 이동했다.
+304 수정되지 않았다.
+305 프록시에서 사용한다.
+307 임시적으로 이동했다.
+
+클라이언트와 서버간의 왕복을 보여준다. 
+
+get/dog 형식으로 요청을 보내고 
+doggy위치로 영구적으로 옮긴다. 
+요청 get/doggy 200
+
+movedPErmanetly
+
+사용자 에이전트는 자위치를 기억할 수 있다. 
+영구적으로 이동되었음
+dog을 요청하는 경우 서버에 가지도 않는다. 
+doggy로 요청해야된다. 
+왕복이 절약된다. 
+
+303 Get/cat 303
+헤더에 /catty
+post가 get으로 밖/ㅟㄴ다 메서드를 보존하지 않는다. 
+
+리다이렉션에서 항상 get을 쓴다. 
+307은 
+post 로 똑같이 받는다. 
+
+상태 코드 418 teapot 
+너무 많은 요청에 부름
+
+http301
+
+메서드는 항상 get으로 된다. w.Header().Set("Location", "/doggy")
+bar index.gohtml 
+post를 /bar 
+form 데이터를 처리할 수 있다. 
+303dmf foo Seeother get메서드로 변겨오딘다. 
+barred메서드는 get이되고 bar의 요청 메서드는 
+
+barred은 get이고 
+bar은 post이고 foo는 getdlek. 
+http.Redriect로 할 수 있다. 
+
+(w, req, "/", http.StatusSeeOther)
+
+템포러리 메서드는 유지한다. 
+
+foo로 본내지고 bar로 가달라고 하지도 않는다. 
+리다이렉션으로 작업할 때 
+
+http.redirection()
+
+쿠키에 고유한 id를 넣고 고유한 id를 보고 사용자와 연관되어 있는지 알 수 있다. 
 
 
 
